# Duffy

./: .gitignore  pyproject.toml
benchmark/: stop_time_pandas_vs_lib.py
custom_dataclasses/: persona.py  stop_times.py
src/: collection.py  dataRepr.py  groupedCollection.py  slottedClass.py
src/fields/: Field_.py  Integer_.py  String_.py
src/utils/: chunkify.py
